<resources>
    <string name="app_name">Nectar</string>
    <string name="online_groceriet">online groceriet</string>
    <string name="welcome_to_">Welcome \nto our store</string>
    <string name="ger_your_gr">Ger your groceries in as fast as one hour</string>
    <string name="ger_your_grr">Get your groceries\nwith nectar</string>
    <string name="or_connect_">Or connect with social media</string>
    <string name="_880">+880</string>
    <string name="get_started">Get Started</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_">Enter your mobile number</string>
    <string name="mobile_numb">Mobile Number</string>
    <string name="enter_your_digit">Enter your 4-digit code</string>
    <string name="code">code</string>
    <string name="resend_code">Resend Code</string>
    <string name="loging">Log In</string>
    <string name="enter_your_email">Enter your email and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_">Don\'t have an account ?</string>
    <string name="signup">SignUp</string>
    <string name="enter_your_credit">Enter your credentials to continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="mohamed_elesely">Mohamed Elesely</string>
    <string name="mohamedelsely56_gmail_com">mohamedelsely56@gmail.com</string>
    <string name="your_order_">Your Order has been\n accepted</string>
    <string name="h2">Your items has been placcd and is on \nit\u00E2\u0080\u0099s way to being processed</string>
    <string name="back_to_home">Back to home</string>
    <string name="track_order">Track Order</string>
    <string name="benn_placed">Your items has been placcd and is on \n it’s way to being processed</string>
    <string name="oops_order_">Oops! Order Failed</string>
    <string name="checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="select_method">Select Method</string>
    <string name="by_placing_an_order_you_agree_to_our_nterms_and_conditions">By placing an order you agree to our\nTerms And Conditions</string>
    <string name="total_cost">Total cost</string>
    <string name="organic_bananas">Organic Bananas</string>
    <string name="_7pcs">7pcs</string>

</resources>