<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LogIn">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="-4dp"
        android:src="@drawable/g" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logocolored" />

    <TextView
        android:id="@+id/loging"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25.01dp"
        android:layout_marginTop="139dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-3sp"
        android:text="@string/loging"
        android:textStyle="bold"
        android:fontFamily="@font/gire"
        android:textAppearance="@style/loging" />

    <TextView
        android:id="@+id/enter_your_"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="182dp"
        android:gravity="top"
        android:lineSpacingExtra="-4sp"
        android:text="@string/enter_your_email"
        android:textAppearance="@style/mobile_numb" />

    <TextView
        android:id="@+id/email"
        android:layout_width="40dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="234dp"
        android:gravity="top"
        android:lineSpacingExtra="9sp"
        android:text="@string/email"
        android:textAppearance="@style/email_password"
        android:translationY="-4.7sp" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="265dp"
        android:drawablePadding="12dp"
        android:inputType="textEmailSubject"
        android:minHeight="48dp" />
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="347dp"
        android:text="@string/password"
        android:textAppearance="@style/email_password"
        android:lineSpacingExtra="9sp"
        android:translationY="-4.7sp"
        android:gravity="top"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="378dp"
        app:passwordToggleEnabled="true"
        android:minHeight="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="265dp"
        android:layout_marginTop="450dp"
        android:fontFamily="@font/girm"
        android:gravity="top"
        android:lineSpacingExtra="-1sp"
        android:text="@string/Forgot_password"
        android:textAppearance="@style/forgot_pass" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="465dp"
        android:orientation="vertical"
       >


        <Button
            android:id="@+id/signIn_login"
            android:layout_width="347dp"
            android:layout_height="63dp"
            android:layout_margin="30dp"
            android:background="@drawable/corners"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           >

           <TextView
               android:id="@+id/don_t_have_"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/don_t_have_"
               android:layout_marginLeft="90dp"
               android:layout_marginTop="-5dp"
               android:textAppearance="@style/don_t_have_" />
           <TextView
               android:id="@+id/SignUp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="-5dp"
               android:layout_marginLeft="5dp"
               android:text="@string/signup"
               android:textColor="#53B175" />
       </LinearLayout>


   </LinearLayout>


</RelativeLayout>