<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignIn">

    <ImageView
        android:layout_width="497dp"
        android:layout_height="341dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="-89dp"
        android:src="@drawable/sign" />

    <TextView
        android:id="@+id/get_your_gr"
        android:layout_width="222dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="344dp"
        android:fontFamily="@font/girm"
        android:gravity="top"
        android:lineSpacingExtra="-3sp"
        android:text="@string/ger_your_grr"
        android:textAppearance="@style/get_your_gr"
        android:textColor="#030303" />

    <TextView
        android:id="@+id/or_connect_"
        android:layout_width="189dp"
        android:layout_height="17dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="505dp"
        android:gravity="center_horizontal|top"
        android:text="@string/or_connect_"
        android:textAppearance="@style/or_connect_" />
    <ImageView
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="440dp"
        android:src="@drawable/egypt" />

    <EditText
        android:id="@+id/Ediiit"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="18dp"
        android:inputType="none"
        android:focusable="false"
        android:editable="false"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/ConnectGoogle"
        android:layout_width="347dp"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:background="@drawable/google_button"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:gravity="center"
        android:paddingStart="25dp"
        android:drawableStart="@drawable/ic_govector"
        android:textColor="#FCFCFC"
        android:text="@string/continue_with_google" />
    <Button
        android:id="@+id/ConnectFacebook"
        android:layout_width="347dp"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:background="@drawable/facebook_button"
        android:paddingStart="25dp"
        android:textColor="#FCFCFC"
        android:drawableStart="@drawable/ic_fbvector"
        android:gravity="center"
        android:text="@string/continue_with_facebook"/>


</RelativeLayout>