<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.OnBoarding">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="-42dp"
        android:scaleType="fitXY"
        android:src="@drawable/onboardingb" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="182dp"
        android:layout_marginTop="385dp"
        android:src="@drawable/ic_carrot" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginTop="371dp"
        android:src="@drawable/ic_carrot2" />

    <TextView
        android:id="@+id/welcome_to_"
        android:layout_width="wrap_content"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="81dp"
        android:layout_marginTop="440dp"
        android:fontFamily="@font/girse"
        android:gravity="center_horizontal|top"
        android:lineHeight="50sp"
        android:lineSpacingExtra="-30sp"
        android:text="@string/welcome_to_"
        android:textAppearance="@style/welcome_to_" />

    <TextView
        android:id="@+id/ger_your_gr"
        android:layout_width="301dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="59.5dp"
        android:layout_marginTop="567dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-4sp"
        android:text="@string/ger_your_gr"
        android:textAppearance="@style/ger_your_gr" />

    <Button
        android:id="@+id/Get_Started"
        android:layout_width="347dp"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:background="@drawable/corners"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:text="@string/get_started" />


</RelativeLayout>