<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignUP">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="-4dp"
        android:src="@drawable/g" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logocolored" />

    <TextView
        android:id="@+id/SignUpp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25.01dp"
        android:layout_marginTop="139dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-3sp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:fontFamily="@font/gire"
        android:textAppearance="@style/loging" />

    <TextView
        android:id="@+id/enter_your_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="182dp"
        android:gravity="top"
        android:lineSpacingExtra="-4sp"
        android:text="@string/enter_your_credit"
        android:textAppearance="@style/mobile_numb" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="234dp"
        android:gravity="top"
        android:lineSpacingExtra="9sp"
        android:text="Username"
        android:textAppearance="@style/email_password"
        android:translationY="-4.7sp" />

    <EditText
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="265dp"
        android:drawablePadding="12dp"
        android:inputType="text"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="40dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="347dp"
        android:gravity="top"
        android:lineSpacingExtra="9sp"
        android:text="@string/email"
        android:textAppearance="@style/email_password"
        android:translationY="-4.7sp" />

    <EditText
        android:id="@+id/email_sign_up"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="378dp"
        android:drawablePadding="12dp"
        android:inputType="textEmailSubject"
        android:minHeight="48dp" />
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="460dp"
        android:text="@string/password"
        android:textAppearance="@style/email_password"
        android:lineSpacingExtra="9sp"
        android:translationY="-4.7sp"
        android:gravity="top"
        />
    <EditText
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="491dp"
        android:drawablePadding="12dp"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/eyepassword"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/by_continui"
        android:layout_width="358.62dp"
        android:layout_height="38.97dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="545dp"
        android:gravity="top"
        android:lineSpacingExtra="-1sp"
        android:text="By continuing you agree to our Terms of Service\nand Privacy Policy."
        android:textAppearance="@style/by_continui" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="600dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/BtnSignUp"
            android:layout_width="347dp"
            android:layout_height="63dp"
            android:layout_marginStart="35dp"
            android:background="@drawable/corners"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/don_t_have_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="10dp"
                android:text="Already have an account ? "
                android:textAppearance="@style/don_t_have_" />

            <TextView
                android:id="@+id/SignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sign_in"
                android:textColor="#53B175" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>